--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,24 @@
 	<properties>
 		<java.version>21</java.version>
 	</properties>
+
+	<dependencyManagement>
+ 		 <dependencies>
+		    <dependency>
+ 		     <groupId>com.google.cloud</groupId>
+  		    <artifactId>libraries-bom</artifactId>
+  		    <version>26.60.0</version>
+  		    <type>pom</type>
+  		    <scope>import</scope>
+ 		   </dependency>
+		  </dependencies>
+	</dependencyManagement>
+
 	<dependencies>
+		<dependency>
+    		<groupId>com.google.cloud</groupId>
+    		<artifactId>google-cloud-language</artifactId>
+  		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
